# safer-lua-api

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  SafeLuaAPI.lua  build.sh  config.ld  functions.yml  safer-lua-api.files  safer-lua-api.includes  template.h  template.h.m4  template2.m4
SafeLuaAPI/: finally.lua  functions.lua  functions.xml  generator.lua  ioexception.lua  parse_prototype.lua
SafeLuaAPI/doc/: index.html
cmake/Modules/: FindLuaJIT.cmake
src/: SafeAPI.c  SafeAPI.h  invocation.c  safeapi.h
