cmake_minimum_required(VERSION 2.7)
project(SafeLuaAPI)
enable_language(C)
option(USE_LUAJIT "Use LuaJIT instead of PUC Lua." ON)
if(USE_LUAJIT)
	list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules/")
	find_package(LuaJIT REQUIRED)
	add_definitions(-DUSE_LUAJIT)
	include_directories(BEFORE "${LuaJIT_INCLUDE_DIRS}")
else()
	find_package(Lua REQUIRED)
	include_directories(BEFORE "${LUA_INCLUDE_DIRS}")
endif()
option(BUILD_SHARED_LIBS "Enable shared libraries." ON)
option(BUILD_STATIC_LIBS "Enable static libraries." ON)
set(SRC_LIST SafeAPI.c)
if(BUILD_SHARED_LIBS)
	add_library("${PROJECT_NAME}" SHARED ${SRC_LIST})
endif()
if(BUILD_STATIC_LIBS)
	add_library("${PROJECT_NAME}-static" STATIC ${SRC_LIST})
endif()
if(NOT BUILD_SHARED_LIBS AND NOT BUILD_STATIC_LIBS)
	message(FATAL_ERROR "Must enable either static or shared libraries.")
endif()
